--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-google-maps": "^4.11.0",
-    "react-router": "^2.8.0"
+    "react-router": "^2.8.0",
+    "susy": "^2.2.12"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
@@ -23,6 +25,12 @@
     "babel-register": "^6.5.2",
     "babel-polyfill": "^6.7.4",
     "json-loader": "^0.5.4",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.9.1",
+    "postcss-loader": "^0.13.0",
+    "sass-loader": "^4.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
